fixed input on mobile in footer to span 100% widht

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -65,4 +65,9 @@ body {
     .l-heading {
         font-size: 2rem;
     }
+
+    #main-footer .footer-container input[type="email"],
+    #main-footer .footer-container input[type="submit"]  {
+        width: 100%;
+    }
 }
